; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-crypt.c_crypt_free_req.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-crypt.c_crypt_free_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypt_config = type { i32 }
%struct.bio = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypt_config*, i8*, %struct.bio*)* @crypt_free_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @crypt_free_req(%struct.crypt_config* %0, i8* %1, %struct.bio* %2) #0 {
  %4 = alloca %struct.crypt_config*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.bio*, align 8
  store %struct.crypt_config* %0, %struct.crypt_config** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.bio* %2, %struct.bio** %6, align 8
  %7 = load %struct.crypt_config*, %struct.crypt_config** %4, align 8
  %8 = call i64 @crypt_integrity_aead(%struct.crypt_config* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.crypt_config*, %struct.crypt_config** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load %struct.bio*, %struct.bio** %6, align 8
  %14 = call i32 @crypt_free_req_aead(%struct.crypt_config* %11, i8* %12, %struct.bio* %13)
  br label %20

15:                                               ; preds = %3
  %16 = load %struct.crypt_config*, %struct.crypt_config** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load %struct.bio*, %struct.bio** %6, align 8
  %19 = call i32 @crypt_free_req_skcipher(%struct.crypt_config* %16, i8* %17, %struct.bio* %18)
  br label %20

20:                                               ; preds = %15, %10
  ret void
}

declare dso_local i64 @crypt_integrity_aead(%struct.crypt_config*) #1

declare dso_local i32 @crypt_free_req_aead(%struct.crypt_config*, i8*, %struct.bio*) #1

declare dso_local i32 @crypt_free_req_skcipher(%struct.crypt_config*, i8*, %struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
